# PocketRadio

./: CMakeLists.txt
components/ec11/: CMakeLists.txt  ec11.c
components/ec11/include/: ec11.h
components/gui/: CMakeLists.txt  ui.c  ui.h  ui_batterylow.c  ui_events.c  ui_helpers.c  ui_helpers.h  ui_home.c  ui_img_battery_low_png.c  ui_img_battery_png.c  ui_img_collection_png.c  ui_img_ic_charge_png.c  ui_img_love_png.c  ui_img_menu_png.c  ui_img_radio_png.c  ui_img_scansion_png.c  ui_img_settings_png.c  ui_menu.c  ui_settings.c  ui_wifi.c
components/lvgl/: CMakeLists.txt
components/st7735/: CMakeLists.txt  st7735.c
components/st7735/include/: st7735.h
components/tea5767/: CMakeLists.txt  tea5767.c
components/tea5767/include/: tea5767.h
main/: CMakeLists.txt  fm.c  main.c  network.c  power.c  test.c  ui.c.bk  ui_helpers.c.bk
main/include/: fm.h  network.h  power.h
