idf_component_register(SRCS "ui_batterylow.c" "ui_wifi.c" "ui_settings.c" "ui_menu.c" "ui_home.c" "ui_img_battery_low_png.c" "ui_events.c" "ui_img_menu_png.c" "ui_img_love_png.c" "ui_img_settings_png.c" "ui.c" "ui_img_battery_png.c" "ui_img_collection_png.c" "ui_img_radio_png.c" "ui_img_scansion_png.c" "ui_img_ic_charge_png.c" "ui_helpers.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES driver lvgl main
                    )

